HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/GenericInstantiationDepthLimit/Expected.uv
//! Expected diagnostic metadata for the GenericInstantiationDepthLimit rejected-source specimen.

expectedDiagnostic("E-TYP-2308", "req.GenericInstantiationDepthLimit")
